--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-Flask-Cors
-gunicorn
-PyJWT
-requests
-python-dotenv
+Flask==3.0.3
+Flask-Cors==4.0.0
+requests==2.32.3
+PyJWT==2.8.0
+Werkzeug==3.0.1
+gunicorn==21.2.0
